EIL管道和检索初步完成